fix about img on mobile

--- a/App/Webroot/sass/_7.trumps/_trumps.about.scss
+++ b/App/Webroot/sass/_7.trumps/_trumps.about.scss
@@ -12,4 +12,8 @@
         padding: 2em;
     }
 
+    .me {
+        max-width: 100%;
+    }
+
 }
